# sigama-process-automation

./: .gitignore  README.md  automacao.txt  main.py  manipulacao_arquivos.txt  posicao.py  prototipo.py  pyproject.toml  teste.py  teste_arquivo.py
config/: settings.py
src/automation/: main.py
src/automation/config/: settings.py
src/automation/core/: controller.py  pipeline.py  worker.py
src/automation/ui/: app.py  main_window.py
src/automation/ui/resources/: main_window.ui
src/automation/utils/: connection.py  input.py  position.py  validate.py
tests/unit/: test_connection.py  test_filesystem.py  test_input.py  test_position.py  test_validate.py
utils/: filesystem.py  position.py  validate.py
